fix www folder